# openf1-promptql

./: README.md  pyproject.toml  pyrightconfig.json
ddn_project/: .env.cloud.template  .env.development  .gitignore  compose.yaml
ddn_project/.hasura/: context.yaml
ddn_project/app/: subgraph.yaml
ddn_project/app/connector/f1_mongo/: compose.yaml  connector.yaml
ddn_project/app/connector/f1_mongo/schema/: car_data.json  drivers.json  intervals.json  laps.json  meetings.json  pits.json  positions.json  sessions.json  stints.json  weather.json
ddn_project/app/metadata/: car_data.hml  drivers.hml  f1_mongo-types.hml  f1_mongo.hml  intervals.hml  laps.hml  meetings.hml  pits.hml  positions.hml  sessions.hml  stints.hml  weather.hml
openf1_dump/: api.py  cli.py  mongo.py  season.py
openf1_dump/models/: car_data.py  drivers.py  intervals.py  laps.py  locations.py  meetings.py  pits.py  positions.py  sessions.py  stints.py  weather.py
